--- a/docker/image-musician/Dockerfile
+++ b/docker/image-musician/Dockerfile
@@ -4,6 +4,6 @@ MAINTAINER Yoann Rohrbasser <yoann.rohrbasser@heig-vd.ch>
 COPY src /opt/app/
 
 WORKDIR /opt/app/
-RUN npm install uuid
+RUN npm install
 
 ENTRYPOINT ["node", "/opt/app/Musician.js"]
